[package]
name = "image_of_images_cli"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
dotenv = "0.15.0"
env_logger = "0.9.0"
image_of_images = { path = "../image_of_images/" }
structopt = "0.3.26"
console = "0.15.0"
